tests/schemas/error/011_missing_service_name.fcp
version: "3"

service @0 {
    method Foo(S1) @0 -> S2
}
